working on about page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="backend1">We are using Firebase ML Kit for text extraction, Oxford API to find the meaning of the word, ARCore to plot the AR models, Wikipedia API </string>
     <string name="backend2">Other libraries include Coil, OkHttp, Picasso, Guava, etc </string>
     <string name="catalystuff"><a href="https://www.freepik.com/free-vector/cute-astronaut-holding-flag-moon-cartoon-vector-icon-illustration-science-technology-icon-concept-isolated-premium-vector-flat-cartoon-style_22383468.htm#query=astronaut&amp;position=0&amp;from_view=search">Image by catalyststuff</a> on Freepik</string>
+    <string name="aboutUs1">We are a group of college students and young professionals who care about our community and the world. Currently, we are experimenting with different stuff.  </string>
 
 
 </resources>
