--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="backend2">Other libraries include Coil, OkHttp, Picasso, Guava, etc </string>
     <string name="catalystuff"><a href="https://www.freepik.com/free-vector/cute-astronaut-holding-flag-moon-cartoon-vector-icon-illustration-science-technology-icon-concept-isolated-premium-vector-flat-cartoon-style_22383468.htm#query=astronaut&amp;position=0&amp;from_view=search">Image by catalyststuff</a> on Freepik</string>
     <string name="aboutUs1">We are a group of college students and young professionals who care about our community and the world. Currently, we are experimenting with different stuff.  </string>
-    <string name="aditya">Hi, I\'m Aditya, an Android Developer, who loves exploring different stuff. Currently I\'m a 3rd year ISE student @NIE.</string>
-    <string name="tuba">I\'m 23 years old. I\'m a very fun loving person. I love travelling and drawing the most.</string>
+    <string name="aditya">Hi, I\'m Aditya, an Android Developer, who loves exploring different stuff. Currently I\'m a 4th year ISE student @NIE.</string>
+    <string name="tuba">I\'m Tuba, a final year ISE student @NIE. I\'m a very fun loving person. I love travelling and drawing the most.</string>
     <string name="sohail">I am Sohail, currently a sophomore @NIE. I love Web Development, Open-Source Contribution and learning new technologies</string>
     <string name="rahul">I\'m Rahul Raj, a final year ISE student @NIE. Im a full stack web developer and ML enthusiast. </string>
 
